--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 studies/
+.vscode/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.env.production
+venv/
+.DS_Store
